--- a/style.css
+++ b/style.css
@@ -90,12 +90,38 @@ body {
 
 .chat_body {
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .body_placeholder {
     font-size: calc(var(--fs) * 1.75);
 }
 /* #endregion Chat */
+
+/* #region chat messages */
+
+.message {
+    text-align: left;
+    padding: 1.2rem 1.8rem;
+    margin: 0.5rem 1rem 0.5rem 1rem;
+    border-radius: 1rem;
+    word-wrap: break-word;
+}
+
+.user_messages {
+    background-color: rgba(232, 212, 212, 0.464);
+   align-self: flex-end;
+   max-width: 70%;
+}
+
+.bot_messages {
+    background-color: rgba(189, 216, 230, 0.456);
+   align-self: flex-start;
+    max-width: 70%;
+}
+/* #endregion chat messages */
 
 /* #region Footer */
 .footer_form {
