added newChats button and array to store previous chats

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ body {
     flex: 1;
     overflow-y: auto;
     padding-right: 0.5rem;
+    position: relative;
 }
 
 .chat_body::-webkit-scrollbar {
@@ -113,6 +114,13 @@ body {
 
 .body_placeholder {
     font-size: calc(var(--fs) * 1.75);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto auto;
+    height: fit-content;
 }
 /* #endregion Chat */
 
