--- a/style.css
+++ b/style.css
@@ -58,17 +58,34 @@ body {
 .sidebar_list {
     list-style: none;
     padding: 0;
-    padding: calc(var(--padding-block) * 3) var(--padding-inline);
+    padding-block: calc(var(--padding-block) * 3);
 }
 
 .sidebar_list_item {
     display: flex;
     gap: 0.5rem;
+    border-radius: .75rem;
+    padding: .5rem .75rem;
+}
+
+.chatListElement {
+    border-radius: .75rem;
+    padding: .5rem .75rem;
 }
 
 .sidebar_list_item span {
     font-size: calc(var(--fs) * 0.875);
     letter-spacing: 0.02em;
+}
+
+#newChatBtn {
+    margin: unset;
+    padding: unset;
+    background-color: unset;
+    border: unset;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
 }
 /* #endregion Sidebar */
 
@@ -196,6 +213,15 @@ body {
     .sidebar_container {
         position: static;
         min-width: var(--sidebar-width);
+    }
+
+    .sidebar_list_item:hover {
+        background-color: #efefef;
+    }
+
+    .chatListElement:hover {
+        background-color: #efefef;
+        cursor: pointer;
     }
     /* #endregion Sidebar */
 
